@startuml
class java.util.HashMap
class java.util.Iterator
class java.util.Scanner
class java.util.Set
class java.util.StringTokenizer
class worldofzuul.Command
class worldofzuul.CommandWords
class worldofzuul.Game
class worldofzuul.Parser
class worldofzuul.Room
enum worldofzuul.CommandWord
worldofzuul.CommandWords ..> java.util.HashMap
worldofzuul.Parser ..> java.util.Scanner
worldofzuul.Parser ..> java.util.StringTokenizer
worldofzuul.Room ..> java.util.HashMap
worldofzuul.Room ..> java.util.Iterator
worldofzuul.Room ..> java.util.Set
java -jar plantuml.jar -testdot
@enduml